--- a/Assignments/HW1_RissetBeats/index.html
+++ b/Assignments/HW1_RissetBeats/index.html
@@ -593,14 +593,9 @@
 												</li>
 												<li><a href = "../../Assignments/HW2_DigitalInstruments">HW2: Digital Instruments</a>
 												</li>
-												<!--
-												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Vocoders And Phase Retrieval</a>
-													<ul>
-														<li>
-															<a href = "../../Assignments/HW3_Vocoders/statements.html">Musical Statements</a>
-														</li>
-													</ul>
+												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												</li>
+												<!--
 												<li><a href = "../../Assignments/HW3b_ConvolutionCompetition">HW3b: Convolution Competition</a>
 												<ul>
 													<li>
