--- a/index.html
+++ b/index.html
@@ -486,10 +486,10 @@
 <tr><td>16</td><td>Wed 2/22/2023</td><td>Complex Numbers Review, Euler's Formula, Complex Definition of DFT And Phase</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module11/Video1">Module 11: STFT, Window Functions, Complex Numbers</a> Due Before Class 
 </td></tr>
 <tr><td></td><td>Thu 2/23/2023</td><td></td><td></td><td bgcolor=#f4e6e7>Assignment 2 Due
-</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Vocoder Concept, Phasors</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a> Due Before Class
-<HR>Assignment 3: Vocoders And Phase Retrieval Out
+</td></tr><tr><td>17</td><td>Fri 2/24/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module12/Video1">Module 12: Complex DFT And Phasors</a> Due Before Class
+<HR>Assignment 3: Spectacular Spectrograms Out
 </td></tr>
-<tr><td>18</td><td>Mon 2/27/2023</td><td>Phasor Mirroring, Aliasing, Inverse DFT</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing</a> Due Before Class
+<tr><td>18</td><td>Mon 2/27/2023</td><td>Inverse STFT, Vocoder Concept, Phase Retrieval</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing</a> Due Before Class
 </td></tr>
 <tr><td>19</td><td>Wed 3/1/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality Due Before Class 
 </td></tr>
@@ -500,10 +500,10 @@
 <tr><td>--</td><td>Wed 3/8/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>--</td><td>Fri 3/10/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>21</td><td>Mon 3/13/2023</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td></td></tr>
-<tr><td>22</td><td>Wed 3/15/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td bgcolor=#f4e6e7>HW4: Tempo Estimation And Beat Tracking Out
-</td></tr>
+<tr><td>22</td><td>Wed 3/15/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td></td></tr>
 <tr><td></td><td>Thu 3/16/2023</td><td></td><td></td><td bgcolor=#f4e6e7>HW3 Due
-</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td></td></tr>
+</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td bgcolor=#f4e6e7>HW4: Tempo Estimation And Beat Tracking Out
+</td></tr>
 <tr><td>24</td><td>Mon 3/20/2023</td><td>Autotuners</td><td></td><td></td></tr>
 <tr><td>25</td><td>Wed 3/22/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td></td></tr>
 <tr><td>26</td><td>Fri 3/24/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
