Broken paper link

--- a/Assignments/HW3_Vocoders/index.html
+++ b/Assignments/HW3_Vocoders/index.html
@@ -607,7 +607,7 @@
 											<h2><a name = "beepytunes">Phase Retrieval Application 2: Beepy Tunes, Aka Tricking Shazam (7 Points)</a></h2>
 
 											<p>
-												The "Shazam technique" is an algorithm for recognizing a tune from a short clip of audio in a noisy environment, and it's led to the popular <a href = "https://www.shazam.com/">shazam app</a>.  The ingenious idea of this algorithms it retain only maxes in the spectrogram, and to throw everything else away.  You can read more details about this algorithm in the <a href = "http://www.ctralie.com/Teaching/CS174_F2020/Assignments/HW5b_Shazam/Wang03-shazam.pdf">original paper</a> and in a <a href = "https://ursinus-cs174-s2022.github.io/CoursePage/Assignments/FinalProject_Shazam/background.html">writeup I made</a>.
+												The "Shazam technique" is an algorithm for recognizing a tune from a short clip of audio in a noisy environment, and it's led to the popular <a href = "https://www.shazam.com/">shazam app</a>.  The ingenious idea of this algorithms it retain only maxes in the spectrogram, and to throw everything else away.  You can read more details about this algorithm in the <a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">original paper</a> and in a <a href = "https://ursinus-cs174-s2022.github.io/CoursePage/Assignments/FinalProject_Shazam/background.html">writeup I made</a>.
 											</p>
 	
 											<p>
