Link to exercise

--- a/Assignments/HW3_Vocoders/index.html
+++ b/Assignments/HW3_Vocoders/index.html
@@ -615,7 +615,7 @@
 											</p>
 											<img src = "WindowMaxLabeled.svg">
 											<p>
-												Since we know this, we can make a spectrogram with only the maxes and trick the Shazam algorithm into thinking it's the original.  For example, below is a spectrogram that we get by picking out all of time/frequency points in a 20 second clip from <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">Rick Astley's famous tune</a> within a 17 x 11 window whos max frequency bin is 256:
+												Since we know this, we can make a spectrogram with only the maxes and trick the Shazam algorithm into thinking it's the original.  For example, below is a spectrogram that we get by picking out all of time/frequency points in a 20 second clip from <a href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ">Rick Astley's famous tune</a> within a 17 x 11 window whose max frequency bin is 256:
 											</p>
 
 											<img src = "Examples/RickRollMaxes.png">
@@ -825,9 +825,9 @@
 												<li><a href = "../../ClassExercises/Week4/Week4_DFT/index.html">Week 4: The Discrete Fourier Transform</a></li>
 												<li><a href = "../../ClassExercises/Week6/2DArrays/index.html">Week 6: 2D Arrays And Spectrograms</a></li>
 												<li><a href = "../../ClassExercises/Week6/ComplexDFT/index.html">Week 6: Complex DFT</a></li>
+												<li><a href = "../../ClassExercises/Week7/Week7_STFTNoiseShaping">Week 7: STFT Noise Shaping</a></li>
 												<!--
 												<li><a href = "../../ClassExercises/Week7/Week7_DFTConvolutions">Week 7: DFT And Convolutions</a></li>
-												<li><a href = "../../ClassExercises/Week7/Week7_STFTNoiseShaping">Week 7: STFT Noise Shaping</a></li>
 												<li><a href = "../../ClassExercises/Week8/Week8_ANF">Week 8: Audio Novelty Functions</a></li>
 												<li><a href = "../../ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
 												<li><a href = "../../ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
