--- a/index.html
+++ b/index.html
@@ -491,9 +491,8 @@
 </td></tr>
 <tr><td>18</td><td>Mon 2/27/2023</td><td>Inverse STFT, Vocoder Concept, Phase Retrieval</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing</a> Due Before Class
 </td></tr>
-<tr><td>19</td><td>Wed 3/1/2023</td><td>Convolution/multiplication duality</td><td></td><td bgcolor=#f4e6e7>Module 14: Convolution And Multiplication Duality Due Before Class 
-</td></tr>
-<tr><td>20</td><td>Fri 3/3/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7>Module 15: Z Transform Due Before Class 
+<tr><td>19</td><td>Wed 3/1/2023</td><td>Convolution/multiplication duality</td><td></td><td></td></tr>
+<tr><td>20</td><td>Fri 3/3/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a> Due Before Class
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "classical">Unit 3: Classical Machine Learning / AI For Digital Music Processing</a></b></h2><p></p></td></tr>
 <tr><td>--</td><td>Mon 3/6/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
