Updating schedule a bit, putting up exercise for tomorrow

--- a/Assignments/HW2_DigitalInstruments/statements.html
+++ b/Assignments/HW2_DigitalInstruments/statements.html
@@ -107,7 +107,6 @@
 												Your browser does not support the audio element.
 												</audio> 
 			
-										<!--
 										<HR>
 											<h2>"Age of Worry"</h2>
 											<h3>by John Mayer</h3>
@@ -116,7 +115,6 @@
 												<source src="statements/jm_ageofworry.mp3" type="audio/mp3">
 												Your browser does not support the audio element.
 												</audio> 
-										-->
 
 										<HR>
 											<h2>"Pokemon Theme Song"</h2>
@@ -204,6 +202,15 @@
 	
 											<audio controls>
 												<source src="statements/missy.mp3" type="audio/mp3">
+												Your browser does not support the audio element.
+												</audio> 
+
+										<HR>
+											<h2>"Arcade Game Over"</h2>
+											<h3>by Panda</h3>
+	
+											<audio controls>
+												<source src="statements/MusicStatementJL.wav" type="audio/wav">
 												Your browser does not support the audio element.
 												</audio> 
 
@@ -326,9 +333,9 @@
 												<li><a href = "../../ClassExercises/Week6/2DArrays/index.html">Week 6: 2D Arrays And Spectrograms</a></li>
 												<li><a href = "../../ClassExercises/Week6/ComplexDFT/index.html">Week 6: Complex DFT</a></li>
 												<li><a href = "../../ClassExercises/Week7/Week7_STFTNoiseShaping">Week 7: STFT Noise Shaping</a></li>
+												<li><a href = "../../ClassExercises/Week8/Week8_ANF">Week 8: Audio Novelty Functions</a></li>
 												<!--
 												<li><a href = "../../ClassExercises/Week7/Week7_DFTConvolutions">Week 7: DFT And Convolutions</a></li>
-												<li><a href = "../../ClassExercises/Week8/Week8_ANF">Week 8: Audio Novelty Functions</a></li>
 												<li><a href = "../../ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
 												<li><a href = "../../ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
 												<li><a href = "../../ClassExercises/Week11/Week11_Shazam">Week 11: Shazam</a></li>!-->
