--- a/index.html
+++ b/index.html
@@ -499,11 +499,14 @@
 <tr><td>--</td><td>Wed 3/8/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>--</td><td>Fri 3/10/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
 <tr><td>21</td><td>Mon 3/13/2023</td><td>Rhythm, Beats, And Audio novelty functions</td><td></td><td></td></tr>
-<tr><td>22</td><td>Wed 3/15/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td></td></tr>
-<tr><td></td><td>Thu 3/16/2023</td><td></td><td></td><td bgcolor=#f4e6e7>HW3 Due
-</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td bgcolor=#f4e6e7>HW4: Tempo Estimation And Beat Tracking Out
+<tr><td>22</td><td>Wed 3/15/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video0">Module 16: Exercise 1 Audi Onsets/oFfsets</a> Due Before Class
 </td></tr>
-<tr><td>24</td><td>Mon 3/20/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td></td></tr>
+<tr><td></td><td>Thu 3/16/2023</td><td></td><td></td><td bgcolor=#f4e6e7>HW3 Due
+</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video2">Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication</a> Due Before Class
+<HR>HW4: Tempo Estimation And Beat Tracking Out
+</td></tr>
+<tr><td>24</td><td>Mon 3/20/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video0">Module 16: Exercise 4 Mel Spectrogram</a> Due Before Class
+</td></tr>
 <tr><td>25</td><td>Wed 3/22/2023</td><td>Chroma Features, Shepard Tones</td><td><ul><li><a href = "https://www.youtube.com/watch?v=YUOR7_40-dQ">Shepard Tone Visualization</a></li></ul></td><td></td></tr>
 <tr><td>26</td><td>Fri 3/24/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
 <tr><td>27</td><td>Mon 3/27/2023</td><td>Self-Similarity in Audio</td><td></td><td></td></tr>
@@ -992,7 +995,6 @@
 												<li><a href = "ClassExercises/Week7/Week7_STFTNoiseShaping">Week 7: STFT Noise Shaping</a></li>
 												<li><a href = "ClassExercises/Week8/Week8_ANF">Week 8: Audio Novelty Functions</a></li>
 												<!--
-												<li><a href = "ClassExercises/Week7/Week7_DFTConvolutions">Week 7: DFT And Convolutions</a></li>
 												<li><a href = "ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
 												<li><a href = "ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
 												<li><a href = "ClassExercises/Week11/Week11_Shazam">Week 11: Shazam</a></li>!-->
@@ -1016,8 +1018,8 @@
 												<li><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing, Inverse DFT</a></li>
 												<li><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
 												<li><a href = "../Modules/Module15/Video0">Module 15: The Z Transform</a></li>
-												<!--
 												<li><a href = "../Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
+												<!--
 												<li><a href = "../Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
 												<li><a href = "../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												!-->
