Finished beat tracking notes and HW4 writeup

--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 <tr><td>22</td><td>Wed 3/15/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video0">Module 16: Exercise 1 Audi Onsets/oFfsets</a> Due Before Class
 </td></tr>
 <tr><td></td><td>Thu 3/16/2023</td><td></td><td></td><td bgcolor=#f4e6e7>HW3 Due
-</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing</td><td></td><td bgcolor=#f4e6e7>Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication Due Before Class<!--<a href = "../Modules/Module16/Video2">Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication</a> Due Before Class!-->
+</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing, Dynamic Programming Beat Tracking</td><td><ul><li><a href = "ClassExercises/BeattrackNotes">Notes on dynamic programming beat tracking</a></li></ul></td><td bgcolor=#f4e6e7>Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication Due Before Class<!--<a href = "../Modules/Module16/Video2">Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication</a> Due Before Class!-->
 <HR>HW4: Tempo Estimation And Beat Tracking Out
 </td></tr>
 <tr><td>24</td><td>Mon 3/20/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td bgcolor=#f4e6e7>Module 16: Exercise 4 Mel Spectrogram<!--<a href = "../Modules/Module16/Video4">Module 16: Exercise 4 Mel Spectrogram</a> Due Before Class!-->
@@ -957,15 +957,8 @@
 												</li>
 												<li><a href = "Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												</li>
-												<!--
-												<li><a href = "Assignments/HW3b_ConvolutionCompetition">HW3b: Convolution Competition</a>
-												<ul>
-													<li>
-														<a href = "Assignments/HW3b_ConvolutionCompetition/statements.html">Musical Statements</a>
-													</li>
-												</ul>
-												</li>
 												<li><a href = "Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
+												<!--
 												<li><a href = "Assignments/HW5_VersionID">HW5: Audio Version Identification</a></li>
 												<li><a href = "Assignments/HW6_LetItBee">HW6: Let It Bee</a>
 													<ul>
@@ -994,6 +987,7 @@
 												<li><a href = "ClassExercises/Week6/ComplexDFT/index.html">Week 6: Complex DFT</a></li>
 												<li><a href = "ClassExercises/Week7/Week7_STFTNoiseShaping">Week 7: STFT Noise Shaping</a></li>
 												<li><a href = "ClassExercises/Week8/Week8_ANF">Week 8: Audio Novelty Functions</a></li>
+												<li><a href = "ClassExercises/BeattrackNotes">Week 9: Notes on Dynamic Programming Beat Tracking</a></li>
 												<!--
 												<li><a href = "ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
 												<li><a href = "ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
