--- a/Assignments/HW1_RissetBeats/index.html
+++ b/Assignments/HW1_RissetBeats/index.html
@@ -595,15 +595,8 @@
 												</li>
 												<li><a href = "../../Assignments/HW3_Vocoders">HW3: Spectacular Spectrograms</a>
 												</li>
-												<!--
-												<li><a href = "../../Assignments/HW3b_ConvolutionCompetition">HW3b: Convolution Competition</a>
-												<ul>
-													<li>
-														<a href = "../../Assignments/HW3b_ConvolutionCompetition/statements.html">Musical Statements</a>
-													</li>
-												</ul>
-												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
+												<!--
 												<li><a href = "../../Assignments/HW5_VersionID">HW5: Audio Version Identification</a></li>
 												<li><a href = "../../Assignments/HW6_LetItBee">HW6: Let It Bee</a>
 													<ul>
@@ -632,6 +625,7 @@
 												<li><a href = "../../ClassExercises/Week6/ComplexDFT/index.html">Week 6: Complex DFT</a></li>
 												<li><a href = "../../ClassExercises/Week7/Week7_STFTNoiseShaping">Week 7: STFT Noise Shaping</a></li>
 												<li><a href = "../../ClassExercises/Week8/Week8_ANF">Week 8: Audio Novelty Functions</a></li>
+												<li><a href = "../../ClassExercises/BeattrackNotes">Week 9: Notes on Dynamic Programming Beat Tracking</a></li>
 												<!--
 												<li><a href = "../../ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
 												<li><a href = "../../ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
