--- a/index.html
+++ b/index.html
@@ -502,19 +502,20 @@
 <tr><td>22</td><td>Wed 3/15/2023</td><td>Audio novelty functions And Autocorrelation</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video0">Module 16: Exercise 1 Audi Onsets/oFfsets</a> Due Before Class
 </td></tr>
 <tr><td></td><td>Thu 3/16/2023</td><td></td><td></td><td bgcolor=#f4e6e7>HW3 Due
-</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing, Dynamic Programming Beat Tracking</td><td><ul><li><a href = "ClassExercises/BeattrackNotes">Notes on dynamic programming beat tracking</a></li></ul></td><td bgcolor=#f4e6e7>Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication Due Before Class<!--<a href = "../Modules/Module16/Video2">Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication</a> Due Before Class!-->
-<HR>HW4: Tempo Estimation And Beat Tracking Out
+</td></tr><tr><td>23</td><td>Fri 3/17/2023</td><td>Matrix Multiplication, Mel Spacing, Dynamic Programming Beat Tracking</td><td><ul><li><a href = "ClassExercises/BeattrackNotes">Notes on dynamic programming beat tracking</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video2">Module 16: Exercise 2 Autocorrelation and 3 Matrix Multiplication</a> Due Before Class
 </td></tr>
-<tr><td>24</td><td>Mon 3/20/2023</td><td>MFCC Features, Inverting MFCC</td><td><ul><li><a href = "ClassExercises/Week8/Week8_MFCC/Mel.html">Code from today</a></li></ul></td><td bgcolor=#f4e6e7>Module 16: Exercise 4 Mel Spectrogram<!--<a href = "../Modules/Module16/Video4">Module 16: Exercise 4 Mel Spectrogram</a> Due Before Class!-->
+<tr><td></td><td>Sun 3/19/2023</td><td></td><td></td><td bgcolor=#f4e6e7><a href = "Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a> Out
+</td></tr><tr><td>24</td><td>Mon 3/20/2023</td><td>MFCC Features, Inverting MFCC</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video4">Module 16: Exercise 4 Mel Spectrogram</a> Due Before Class
 </td></tr>
 <tr><td>25</td><td>Wed 3/22/2023</td><td>Chroma Features, Shepard Tones</td><td><ul><li><a href = "https://www.youtube.com/watch?v=YUOR7_40-dQ">Shepard Tone Visualization</a></li></ul></td><td></td></tr>
 <tr><td>26</td><td>Fri 3/24/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
-<tr><td>27</td><td>Mon 3/27/2023</td><td>Self-Similarity in Audio</td><td></td><td></td></tr>
-<tr><td>28</td><td>Wed 3/29/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
-<tr><td>29</td><td>Fri 3/31/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
-<tr><td>30</td><td>Mon 4/3/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
-<tr><td>31</td><td>Wed 4/5/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
-<tr><td>32</td><td>Fri 4/7/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
+<tr><td>27</td><td>Mon 3/27/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
+<tr><td>28</td><td>Wed 3/29/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
+<tr><td>29</td><td>Fri 3/31/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
+<tr><td>30</td><td>Mon 4/3/2023</td><td>Self-Similarity in Audio, Spectral Clustering</td><td></td><td bgcolor=#f4e6e7>HW4 Due
+</td></tr>
+<tr><td>31</td><td>Wed 4/5/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
+<tr><td>32</td><td>Fri 4/7/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
 <tr><td>33</td><td>Mon 4/10/2023</td><td>Autotuners</td><td></td><td></td></tr>
 <tr><td colspan = "5"><h2><b><a name = "neuralnets">Unit 4: Neural Networks for Digital Music Processing</a></b></h2><p></p></td></tr>
 <tr><td>34</td><td>Wed 4/12/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
