--- a/Assignments/HW4_RhythmAnalysis/index.html
+++ b/Assignments/HW4_RhythmAnalysis/index.html
@@ -130,7 +130,7 @@
 
 										<p>
 											<audio controls>
-												<source src="HW4_RhythmAnalysis/fishin.wav" type="audio/mpeg">
+												<source src="HW4_Rhythm/fishin.wav" type="audio/mpeg">
 											  Your browser does not support the audio element.
 											</audio> 
 										</p>
