--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 <tr><td>18</td><td>Mon 2/27/2023</td><td>Inverse STFT, Vocoder Concept, Phase Retrieval</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module13/Video1.html">Module 13: Aliasing</a> Due Before Class
 </td></tr>
 <tr><td>19</td><td>Wed 3/1/2023</td><td>Convolution/multiplication duality</td><td></td><td></td></tr>
-<tr><td>20</td><td>Fri 3/3/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a> Due Before Class
+<tr><td>20</td><td>Fri 3/3/2023</td><td>The Z-Transform, Lowpass Filters / Highpass Filters, frequency analysis of comb filters</td><td><ul><li><a href = "https://learningsynths.ableton.com/filters/filters-in-the-real-world">Ableton: Filters in The Real World</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a> Due Before Class
 </td></tr>
 <tr><td colspan = "5"><h2><b><a name = "classical">Unit 3: Classical Machine Learning / AI For Digital Music Processing</a></b></h2><p>Now that we have frequency domain tools down, we're going to build things on top of it to address several higher level problems, including: <ul><li>Tempo estimation and beat tracking</li><li>Timbre and pitch modeling for audio classification</li><li>The "Shazam algorithm" for audio fingerprinting</li><li>Hierarchical music structure estimation</li><li>Cross-version comparison and time warping</li><li>"Un-mixing" audio, or separating audio into its tracks</li></ul>All of these problems can be accomplished with straightforward mathematical algorithms built on top of the Short-Time Fourier Transform (STFT).</p></td></tr>
 <tr><td>--</td><td>Mon 3/6/2023</td><td>Spring Break</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
@@ -509,25 +509,24 @@
 </td></tr>
 <tr><td>25</td><td>Wed 3/22/2023</td><td>Chroma Features, Shepard Tones</td><td><ul><li><a href = "https://www.youtube.com/watch?v=YUOR7_40-dQ">Shepard Tone Visualization</a></li></ul></td><td></td></tr>
 <tr><td>26</td><td>Fri 3/24/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Our Python Implementation of Shazam</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
-<tr><td>27</td><td>Mon 3/27/2023</td><td>Harmonic-Percussive Source Separation</td><td></td><td></td></tr>
-<tr><td>28</td><td>Wed 3/29/2023</td><td>Matrix Multiplication for Audio Activations</td><td></td><td></td></tr>
-<tr><td>29</td><td>Fri 3/31/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
+<tr><td>27</td><td>Mon 3/27/2023</td><td>Harmonic-Percussive Source Separation, Matrix Multiplication for Audio Activations</td><td><ul><li><a href = "https://www.researchgate.net/profile/Derry-Fitzgerald/publication/254583990_HarmonicPercussive_Separation_using_Median_Filtering/links/00b495396ef03235af000000/Harmonic-Percussive-Separation-using-Median-Filtering.pdf">FitzGerald 2010 Paper</a></li></ul></td><td></td></tr>
+<tr><td>28</td><td>Wed 3/29/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
+<tr><td>29</td><td>Fri 3/31/2023</td><td>Let It Bee, Autotuners</td><td></td><td></td></tr>
 <tr><td>30</td><td>Mon 4/3/2023</td><td>Self-Similarity in Audio, Spectral Clustering</td><td></td><td bgcolor=#f4e6e7>HW4 Due
 </td></tr>
 <tr><td>31</td><td>Wed 4/5/2023</td><td>Cross-Similarity Matrices, Dynamic Time Warping</td><td></td><td></td></tr>
 <tr><td>32</td><td>Fri 4/7/2023</td><td>Dynamic Time Warping Continued</td><td></td><td></td></tr>
-<tr><td>33</td><td>Mon 4/10/2023</td><td>Autotuners</td><td></td><td></td></tr>
 <tr><td colspan = "5"><h2><b><a name = "neuralnets">Unit 4: Neural Networks for Digital Music Processing</a></b></h2><p></p></td></tr>
-<tr><td>34</td><td>Wed 4/12/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
-<tr><td>35</td><td>Fri 4/14/2023</td><td>Deep Learning</td><td></td><td></td></tr>
-<tr><td>36</td><td>Mon 4/17/2023</td><td>Convolutional Neural Networks</td><td></td><td></td></tr>
+<tr><td>33</td><td>Mon 4/10/2023</td><td>Introduction To Neural Networks</td><td></td><td></td></tr>
+<tr><td>34</td><td>Wed 4/12/2023</td><td>Deep Learning</td><td></td><td></td></tr>
+<tr><td>35</td><td>Fri 4/14/2023</td><td>Convolutional Neural Networks</td><td></td><td></td></tr>
+<tr><td>36</td><td>Mon 4/17/2023</td><td>Wavenet</td><td><ul><li><a href = "https://www.deepmind.com/blog/wavenet-a-generative-model-for-raw-audio">DeepMind WaveNet blog post</a></li></ul></td><td></td></tr>
 <tr><td>--</td><td>Wed 4/19/2023</td><td>COSA Day</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
-<tr><td>37</td><td>Fri 4/21/2023</td><td>Deep beat tracking</td><td><ul><li><a href = "https://ofai.at/~jan.schlueter/pubs/2014_icassp.pdf">Schlüter/Böck 2014: "Improved Musical Onset Detection with Convolutional Neural Networks</a></li><li><a href = "https://www.eurasip.org/Proceedings/Eusipco/eusipco2019/Proceedings/papers/1570533824.pdf">Davies/Böck 2019: Temporal Convolutional Neural Networks for Musical Audio Beat Tracking</a></li></ul></td><td></td></tr>
-<tr><td>38</td><td>Mon 4/24/2023</td><td>Deep beat tracking continued</td><td></td><td></td></tr>
-<tr><td>39</td><td>Wed 4/26/2023</td><td>Wavenet</td><td></td><td></td></tr>
-<tr><td>40</td><td>Fri 4/28/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
-<tr><td>41</td><td>Mon 5/1/2023</td><td>Machine Learning Meets FM Synthesis</td><td></td><td></td></tr>
-<tr><td>42</td><td>Wed 5/3/2023</td><td>Machine Learning Meets FM Synthesis</td><td></td><td></td></tr>
+<tr><td>37</td><td>Fri 4/21/2023</td><td>Differentiable Digital Signal Processing</td><td><ul><li><a href = "https://magenta.tensorflow.org/ddsp">Google Magenta DDSP Blog Post</a></li></ul></td><td></td></tr>
+<tr><td>38</td><td>Mon 4/24/2023</td><td>Wave-U-Net for Source Separation</td><td><ul><li><a href = "https://arxiv.org/pdf/1806.03185.pdf">Wave-U-Net Paper</a></li></ul></td><td></td></tr>
+<tr><td>39</td><td>Wed 4/26/2023</td><td>Deep beat tracking</td><td><ul><li><a href = "https://ofai.at/~jan.schlueter/pubs/2014_icassp.pdf">Schlüter/Böck 2014: "Improved Musical Onset Detection with Convolutional Neural Networks</a></li><li><a href = "https://www.eurasip.org/Proceedings/Eusipco/eusipco2019/Proceedings/papers/1570533824.pdf">Davies/Böck 2019: Temporal Convolutional Neural Networks for Musical Audio Beat Tracking</a></li></ul></td><td></td></tr>
+<tr><td>40</td><td>Fri 4/28/2023</td><td>Machine Learning Meets FM Synthesis</td><td></td><td></td></tr>
+<tr><td>41</td><td>Mon 5/1/2023</td><td>Diffusion for Audio Synthesis</td><td></td><td></td></tr>
 </td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr></td></tr><!-- End Schedule -->
 
 
