--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@
 </td></tr>
 <tr><td>25</td><td>Wed 3/22/2023</td><td>Chroma Features, Shepard Tones</td><td><ul><li><a href = "https://www.youtube.com/watch?v=YUOR7_40-dQ">Shepard Tone Visualization</a></li></ul></td><td></td></tr>
 <tr><td>26</td><td>Fri 3/24/2023</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Our Python Implementation of Shazam</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td></td></tr>
-<tr><td>27</td><td>Mon 3/27/2023</td><td>Harmonic-Percussive Source Separation, Matrix Multiplication for Audio Activations</td><td><ul><li><a href = "https://www.researchgate.net/profile/Derry-Fitzgerald/publication/254583990_HarmonicPercussive_Separation_using_Median_Filtering/links/00b495396ef03235af000000/Harmonic-Percussive-Separation-using-Median-Filtering.pdf">FitzGerald 2010 Paper</a></li></ul></td><td></td></tr>
+<tr><td>27</td><td>Mon 3/27/2023</td><td>Harmonic-Percussive Source Separation, Matrix Multiplication for Audio Activations</td><td><ul><li><a href = "../Modules/Module18/Video0">Class notes on HPSS</a></li><li><a href = "https://www.researchgate.net/profile/Derry-Fitzgerald/publication/254583990_HarmonicPercussive_Separation_using_Median_Filtering/links/00b495396ef03235af000000/Harmonic-Percussive-Separation-using-Median-Filtering.pdf">FitzGerald 2010 Paper</a></li></ul></td><td></td></tr>
 <tr><td>28</td><td>Wed 3/29/2023</td><td>Source Separation via Nonnegative matrix factorization</td><td><ul><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
 <tr><td>29</td><td>Fri 3/31/2023</td><td>Let It Bee, Autotuners</td><td></td><td></td></tr>
 <tr><td>30</td><td>Mon 4/3/2023</td><td>Self-Similarity in Audio, Spectral Clustering</td><td></td><td bgcolor=#f4e6e7>HW4 Due
@@ -990,6 +990,7 @@
 												<li><a href = "ClassExercises/BeattrackNotes">Week 9: Notes on Dynamic Programming Beat Tracking</a></li>
 												<li><a href = "ClassExercises/Week9/Week9_MFCC">Week 9: Mel-Frequency Cepstral Coefficients (MFCCs)</a></li>
 												<li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Week 9: Python Implementation of Shazam</a></li>
+												<li><a href = "https://github.com/ursinus-cs372-s2023/Week10_HPSS/tree/classcode">Week 10: Harmonic/Percussive Source Separation with Median Filters</a></li>
 												<!--
 												<li><a href = "ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
 												<li><a href = "ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
@@ -1015,9 +1016,9 @@
 												<li><a href = "../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
 												<li><a href = "../Modules/Module15/Video0">Module 15: The Z Transform</a></li>
 												<li><a href = "../Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
+												<li><a href = "../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												<!--
 												<li><a href = "../Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
-												<li><a href = "../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												!-->
 											</ul>
 										</li>
