--- a/ClassExercises/Week4/Week4_DFT/index.html
+++ b/ClassExercises/Week4/Week4_DFT/index.html
@@ -252,6 +252,7 @@
 												<li><a href = "../../../ClassExercises/BeattrackNotes">Week 9: Notes on Dynamic Programming Beat Tracking</a></li>
 												<li><a href = "../../../ClassExercises/Week9/Week9_MFCC">Week 9: Mel-Frequency Cepstral Coefficients (MFCCs)</a></li>
 												<li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Week 9: Python Implementation of Shazam</a></li>
+												<li><a href = "https://github.com/ursinus-cs372-s2023/Week10_HPSS/tree/classcode">Week 10: Harmonic/Percussive Source Separation with Median Filters</a></li>
 												<!--
 												<li><a href = "../../../ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
 												<li><a href = "../../../ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
@@ -277,9 +278,9 @@
 												<li><a href = "../../../../Modules/Module14/Video1">Module 14: Convolution And Multiplication Duality</a></li>
 												<li><a href = "../../../../Modules/Module15/Video0">Module 15: The Z Transform</a></li>
 												<li><a href = "../../../../Modules/Module16/Video0">Module 16: Audio Novelty Functions, Tempo Estimation, Matrix Multiplication</a></li>
+												<li><a href = "../../../../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												<!--
 												<li><a href = "../../../../Modules/Module17/Video0">Module 17: Cross-Similarity, Warping Paths, Dynamic Time Warping</a></li>
-												<li><a href = "../../../../Modules/Module18/Video0">Module 18: Matrix Multiplication for Audio Activations</a></li>
 												!-->
 											</ul>
 										</li>
