--- a/Assignments/HW4_RhythmAnalysis/index.html
+++ b/Assignments/HW4_RhythmAnalysis/index.html
@@ -219,7 +219,7 @@
 												Perform a <b>maximum filter</b>; that is, replace every amplitude in every window by the maximum of the amplitudes of a window of length <code>max_win</code> around them.  You can use <a href = "https://docs.scipy.org/doc/scipy/reference/generated/scipy.ndimage.maximum_filter.html">scipy's <code>maximum_filter</code></a> method, which has already been imported as <code>maximum_filter</code>, to do this in one line.  The shape of the filter should be <code>(max_win, 1)</code>, or, in other words, a vertical window of <code>max_win in size</code>.
 											</li>
 											<li>
-												Take the sum of positive differences of amplitudes across all frequency bins from a window to a window in the future, similarly to the naive version.  However, the hop length in superflux is generally taken to be smaller than usual so the windows are sampled at a higher resolution, leading to a higher resolution audio novelty function.  This means that adjacent windows change less.  To compensate for this, instead of taking the difference in amplitudes for corresponding frequencies in adjacent windows, you should take differences with windows that are <code>mu</code> hops ahead in the future (as described in Section 2.1 of <a href = "http://phenicx.upf.edu/system/files/publications/Boeck_DAFx-13.pdf">the superflux paper</a>).
+												Take the sum of <b>positive differences of amplitudes</b> across all frequency bins from a window to a window in the future, similarly to the naive version (recall that in the positive difference, we don't add things to the sum that are negative, so this is not the same as the absolute value).  However, the hop length in superflux is generally taken to be smaller than usual so the windows are sampled at a higher resolution, leading to a higher resolution audio novelty function.  This means that adjacent windows change less.  To compensate for this, instead of taking the difference in amplitudes for corresponding frequencies in adjacent windows, you should take differences with windows that are <code>mu</code> hops ahead in the future (as described in Section 2.1 of <a href = "http://phenicx.upf.edu/system/files/publications/Boeck_DAFx-13.pdf">the superflux paper</a>).
 
 												<p>
 													<b>Hint:</b> Be sure to review <a href = "https://ursinus-cs372-s2023.github.io/Modules/Module16/Video0">module 16 video 0 and video 1</a> to recall how to do the positive difference step.
@@ -644,10 +644,8 @@
 												<li><a href = "../../ClassExercises/Week9/Week9_MFCC">Week 9: Mel-Frequency Cepstral Coefficients (MFCCs)</a></li>
 												<li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Week 9: Python Implementation of Shazam</a></li>
 												<li><a href = "https://github.com/ursinus-cs372-s2023/Week10_HPSS/tree/classcode">Week 10: Harmonic/Percussive Source Separation with Median Filters</a></li>
-												<!--
-												<li><a href = "../../ClassExercises/Week9/Week9_DTWBacktrace">Week 9: DTW Backtrace</a></li>
-												<li><a href = "../../ClassExercises/Week10/Week10_Chroma">Week 10: Chromagrams</a></li>
-												<li><a href = "../../ClassExercises/Week11/Week11_Shazam">Week 11: Shazam</a></li>!-->
+												<li><a href = "../../ClassExercises/Week9/Week9_MFCC">Week 10: Nonnegative Matrix Factorization for Demixing</a></li>
+												
 											</ul>
 										</li>
                                         <li>
